TestCases/Errors/scan.cd
Int main()
{

    Int a = 0;
    String s = "Hello World!";
    Scan(s);

    Scan(c);

    Scan(1);

}